# typstudio-continued

./: .dir2md.json  .gitignore  README.md  icon.sketch  package.json
.github/workflows/: release.yml
screenshots/: README.md
scripts/: install.ts  release.ts
src/: app.css
src-tauri/: Cargo.toml  check_output.txt  check_output_2.txt  check_output_3.txt  check_output_4.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  menu.rs
src-tauri/src/compiler/: cancellation.rs  incr_renderer.rs  mod.rs  service.rs
src-tauri/src/engine/: engine.rs  font.rs
src-tauri/src/ipc/: events.rs  model.rs
src-tauri/src/ipc/commands/: clipboard.rs  fs.rs  git.rs  mod.rs  playground.rs  typst.rs
src-tauri/src/project/: manager.rs  project.rs  world.rs
src/components/: CompileErrorDisplay.svelte  ContextMenu.svelte  DocumentOutline.svelte  Editor.svelte  ExplorerNode.svelte  ExplorerTree.svelte  FileViewer.svelte  LoadingScreen.svelte  PackagesPanel.svelte  Preview.svelte  PreviewPage.svelte  QuickOpen.svelte  Resizer.svelte  ShellModal.svelte  SidePanel.svelte  StatusBar.svelte  WelcomeScreen.svelte  ZoomControls.svelte
src/lib/: diff-utils.ts  diff.ts  fn.ts  icons.ts  outline.ts  scroll.ts  stores.ts  typst-patch.ts
src/lib/editor/: completion.ts  monaco.ts
src/lib/ipc/: clipboard.ts  fs.ts  git.ts  index.ts  typst.ts
src/routes/: +layout.svelte  +page.svelte
