[package]
name = "typstudio"
version = "0.1.0"
description = "A Tauri App"
authors = ["Cubxity"]
license = "GPL-3.0-or-later"
repository = "https://github.com/Cubxity/typstudio"
default-run = "typstudio"
edition = "2021"
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time"] }
tauri = { version = "2.3", features = ["devtools"] }
tauri-plugin-shell = "2.2"
tauri-plugin-dialog = "2.2"
tauri-plugin-fs = "2.3"
tauri-plugin-opener = "2.2"
anyhow = "1.0"
thiserror = "1.0"
enumset = { version = "1.1", features = ["serde"] }
siphasher = "1.0"
once_cell = "1.19"
elsa = "1.10"
hex = "0.4"
base64 = "0.22"
notify = "6.1"
arboard = "3.3"
chrono = "0.4"
png = "0.17"
log = "0.4"
env_logger = "0.11"
dirs = "5.0"
walkdir = "2.5"
memmap2 = "0.9"
opener = { version = "0.7", features = ["reveal"] }
zip = "0.6"

typst = "0.14"
typst-ide = "0.14"
typst-pdf = "0.14"
typst-render = "0.14"
typst-svg = "0.14"
typst-syntax = "0.14"
comemo = "0.5"
ecow = "0.2"
git2 = "0.20.3"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
